cabal-version:      2.4
name:               cardano-contractor
version:            0.1.0.0

author:             m4rcster
maintainer:         marc.liew@me.com

category:            Web
build-type:          Simple

executable cardano-contractor
    hs-source-dirs: server
    main-is: Main.hs
    build-depends:
        base ^>=4.16
      , scotty >= 0.12
    other-modules:
        contractor
    default-language: Haskell2010
