cabal-version:      2.4
name:               cardano-contractor
version:            0.1.0.0

author:             m4rcster
maintainer:         marc.liew@me.com

category:            Web
build-type:          Simple

executable cardano-contractor
    hs-source-dirs: server
    main-is: Main.hs
    build-depends:
        base >=4.14
      , scotty >= 0.12
    other-modules:
        Contractor
    default-language: Haskell2010
